--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: leds-buzzers-scratch-games
+title: LEDs, buzzers and Scratch games
 hero_image: images/banner.png
 description: leds-buzzers-scratch-games description
 version: 4
