--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
 title: LEDs, buzzers and Scratch games
 hero_image: images/banner.png
-description: leds-buzzers-scratch-games description
+description: Use physical computing outputs with Scratch 3 and a Raspberry Pi 4
 version: 4
 listed: false
 copyedit: false
