--- a/en/meta.yml
+++ b/en/meta.yml
@@ -14,6 +14,6 @@ steps:
   - title: Making noise with buzzers
   - title: Coding sequences
   - title: Scratch, sound and lights
+  - title: Scratch, sound and lights interactive
   - title: Scratch games with LEDs and buzzers
-  - title: Think big!
   - title: What next?
