--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,19 +1,24 @@
+---
 title: LEDs, buzzers and Scratch games
 hero_image: images/banner.png
 description: Use physical computing outputs with Scratch 3 and a Raspberry Pi 4
 version: 4
 listed: true
 copyedit: true
-last_tested: "2020-02-25"
+last_tested: '2020-02-25'
 steps:
-  - title: Introduction
-  - title: Lighting an LED
-  - title: Coding an LED using an GPIO pin
-  - title: "Challenge: Light show!"
-    challenge: true
-  - title: Making noise with buzzers
-  - title: Coding sequences
-  - title: Scratch, sound and lights
-  - title: Scratch, sound and lights interactive
-  - title: Scratch games with LEDs and buzzers
-  - title: What next?
+- title: Introduction
+- title: Lighting an LED
+- title: Coding an LED using an GPIO pin
+  completion:
+  - engaged
+- title: 'Challenge: Light show!'
+  challenge: true
+- title: Making noise with buzzers
+- title: Coding sequences
+- title: Scratch, sound and lights
+- title: Scratch, sound and lights interactive
+- title: Scratch games with LEDs and buzzers
+  completion:
+  - internal
+- title: What next?
