--- a/en/meta.yml
+++ b/en/meta.yml
@@ -3,7 +3,7 @@ title: LEDs, buzzers and Scratch games
 hero_image: images/banner.png
 description: Use physical computing outputs with Scratch 3 and a Raspberry Pi 4
 version: 4
-listed: true
+listed: false
 copyedit: true
 last_tested: '2020-02-25'
 steps:
